--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="100">
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="12" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <import type="androidx.fragment.app.Fragment"/>
+        <variable
+            name="inputText"
+            type="String" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="88"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="100">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="12" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="88"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/attach_description"
-            android:src="@mipmap/attachment_round"
-            />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/attach_description"
+                android:src="@mipmap/attachment_round"
+                />
 
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:hint="@string/message_hint"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine"
-            android:layout_weight="1"/>
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:hint="@string/message_hint"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                android:text="@{inputText}"
+                android:layout_weight="1"/>
 
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/send"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/send"
+                android:onClick="@{() -> }"/>
+        </LinearLayout>
+
+
     </LinearLayout>
-
-
-</LinearLayout>
+</layout>
