--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/image_displayed"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-</LinearLayout>
+    </data>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/image_displayed"
+            android:src="@{image}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    
+    </LinearLayout>
+</layout>
