--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,58 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="100"
-    android:baselineAligned="false">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="status"
+            type="String" />
+        <variable
+            name="textOutput"
+            type="String" />
+    </data>
     <LinearLayout
-        android:id="@+id/chat_left_msg_layout"
+
+        android:id="@+id/chat_msg_layout"
         android:orientation="vertical"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_weight="50">
+        android:layout_gravity="@{status}">
 
         <TextView
-            android:id="@+id/chat_left_msg_text_view"
+            android:id="@+id/chat_msg_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"/>
-        <HorizontalScrollView
-            android:id="@+id/left_image_list"
+            android:layout_margin="10dp"
+            android:text="@{textOutput}"/>
+        <ScrollView
+            android:id="@+id/image_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/left_file_list"
+            android:id="@+id/file_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/chat_right_msg_layout"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_weight="50">
-        <TextView
-            android:id="@+id/chat_right_msg_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"/>
-        <HorizontalScrollView
-            android:id="@+id/right_image_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/right_file_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</layout>
