--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/send"
-                android:onClick="@{() -> }"/>
+                android:onClick="@{() -> ChatFragment.ButtonClickListener()}"/>
         </LinearLayout>
 
 
