--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical"
         android:weightSum="100">
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/messagesRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="12" />
@@ -41,10 +42,10 @@
 
 
             <Button
+                android:id="@+id/sendButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/send"
-                android:onClick="@{() -> ChatFragment.ButtonClickListener()}"/>
+                android:text="@string/send"/>
         </LinearLayout>
 
 
