--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,9 +3,6 @@
 
     <data>
         <import type="androidx.fragment.app.Fragment"/>
-        <variable
-            name="inputText"
-            type="String" />
     </data>
 
     <LinearLayout
@@ -32,12 +29,13 @@
                 />
 
             <EditText
+                android:id="@+id/textInput"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:hint="@string/message_hint"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
-                android:text="@{inputText}"
+                android:text=""
                 android:layout_weight="1"/>
 
 
