--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -2,31 +2,31 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="status"
-            type="String" />
-        <variable
             name="textOutput"
             type="String" />
     </data>
     <LinearLayout
-
-        android:id="@+id/chat_msg_layout"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="@{status}">
-
-        <TextView
-            android:id="@+id/chat_msg_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/chat_msg_layout"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:text="@{textOutput}"/>
-        <ImageView
-            android:id="@+id/chat_msg_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
 
+            <TextView
+                android:id="@+id/chat_msg_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:text="@{textOutput}"/>
+            <ImageView
+                android:id="@+id/chat_msg_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
     </LinearLayout>
 </layout>
