Getter and Setter Unit Tests

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -21,7 +21,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:text="@{textOutput}"/>
+                android:text="@{textOutput}"
+                android:textIsSelectable="true"/>
             <ImageView
                 android:id="@+id/chat_msg_image_view"
                 android:layout_width="wrap_content"
