--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -19,16 +19,18 @@
             <TextView
                 android:id="@+id/chat_msg_text_view"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="@{textOutput}"
                 android:textIsSelectable="true"
                 android:background="@color/colorPrimary"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/colorAccent"
+                android:textSize="10pt"/>
             <ImageView
+                android:contentDescription="@{textOutput}"
                 android:id="@+id/chat_msg_image_view"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
     </LinearLayout>
