Finished sprint requirements
met all requirements for this current sprint. Further functionality will be needed later on in future sprints, but this has established a baseline.

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,6 +8,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="edu.uwstout.p2pchat.HomeFragment"
-        android:label="fragment_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home" />
 </navigation>
