--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- add an icon too each item later -->
+    <!-- TODO add an icon to each item later -->
     <item
-        android:id="@+id/chatHistory"
+        android:id="@+id/chatHistoryFragment"
         android:title="@string/chat_history"/>
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/settingFragment"
         android:title="@string/settings"/>
 
     <item
-        android:id="@+id/helpPage"
+        android:id="@+id/helpPageFragment"
         android:title="@string/help"/>
 </menu>
