ExpressoTests and Minor edits

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,6 +22,7 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/attachmentButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/attach_description"
