--- a/app/src/main/res/layout/fragment_nick_name.xml
+++ b/app/src/main/res/layout/fragment_nick_name.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nickNameFrame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingFragment">
+    tools:context=".NickNameFragment">
 
-    <ExpandableListView
-        android:id="@+id/eList"
+
+    <ListView
+        android:id="@+id/nameListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-</FrameLayout>
+</LinearLayout>
