--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -37,6 +37,11 @@
             android:name="address"
             android:defaultValue="default"
             app:argType="string"/>
+        <action
+            android:id="@+id/action_chatFragment_to_attachmentFragment"
+            app:destination="@id/attachmentFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
     <fragment
@@ -54,5 +59,10 @@
             app:destination="@+id/nickNameFragment"
             app:popUpTo="@id/nickNameFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/attachmentFragment"
+        android:name="edu.uwstout.p2pchat.AttachmentFragment"
+        android:label="fragment_attachment"
+        tools:layout="@layout/fragment_attachment"/>
 
 </navigation>
