--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -42,13 +42,13 @@
     <fragment
         android:id="@+id/nickNameFragment"
         android:name="edu.uwstout.p2pchat.NickNameFragment"
-        android:label="fragment_nick_name"
+        android:label="Change Nick Names"
         tools:layout="@layout/fragment_nick_name" />
     <fragment
         android:id="@+id/settingFragment"
         android:name="edu.uwstout.p2pchat.SettingFragment"
-        android:label="fragment_setting"
-        tools:layout="@layout/fragment_setting" >
+        android:label="Setting"
+        tools:layout="@layout/fragment_setting">
         <action
             android:id="@+id/toNickNameFragment"
             app:destination="@+id/nickNameFragment"
