--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -10,10 +10,9 @@
     <ExpandableListView
         android:id="@+id/eList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-
+        android:layout_height="match_parent"
+        android:groupIndicator="@null"
+        />
 
 
 </FrameLayout>
