--- a/app/src/main/res/layout/rename_dialog.xml
+++ b/app/src/main/res/layout/rename_dialog.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/renamePopupLayout"
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="652dp"
-        android:orientation="vertical"
-        android:gravity="top">
 
         <EditText
             android:id="@+id/newNickName"
@@ -18,11 +15,10 @@
             android:layout_marginRight="10dp"
             android:autofillHints=""
             android:ems="10"
-            android:hint="new_nickname"
+            android:hint="new nickname"
             android:inputType="textPersonName"
             android:textSize="24sp" />
 
-    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
