--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="selectedBackgroundColor">#E2E2E2</color>
+    <color name="defaultBackgroundColor">#ffffff</color>
+    <color name="black">#0E0D0D</color>
 </resources>
