Updated Item Message with master for this branch only.

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -8,20 +8,13 @@
             name="timestamp"
             type="String" />
     </data>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/selectedBackgroundColor"
+        android:layout_marginVertical="10dp"
         android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/chat_msg_layout"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/selectedBackgroundColor"
-            android:layout_marginVertical="10dp"
-            android:layout_gravity="end">
-
-
+        
 
             <TextView
                 android:id="@+id/chat_msg_timestamp_view"
@@ -44,13 +37,8 @@
                 android:background="@color/selectedBackgroundColor"
                 android:textColor="@color/black"
                 android:textSize="8pt"/>
-            <ImageView
-                android:contentDescription="@{textOutput}"
-                android:id="@+id/chat_msg_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/selectedBackgroundColor" />
 
-        </LinearLayout>
-    </LinearLayout>
+
+
+    </RelativeLayout>
 </layout>
