--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -9,36 +9,32 @@
             type="String" />
     </data>
     <RelativeLayout
+        android:id="@+id/chat_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/selectedBackgroundColor"
-        android:layout_marginVertical="10dp"
-        android:orientation="vertical">
-        
+        android:layout_marginVertical="10dp">
 
-            <TextView
-                android:id="@+id/chat_msg_timestamp_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:textIsSelectable="true"
-                android:text="@{timestamp}"
-                android:background="@color/selectedBackgroundColor"
-                android:textColor="@color/black"
-                android:textSize="8pt"/>
-
-            <TextView
-                android:id="@+id/chat_msg_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@{textOutput}"
-                android:textIsSelectable="true"
-                android:background="@color/selectedBackgroundColor"
-                android:textColor="@color/black"
-                android:textSize="8pt"/>
-
-
+        <TextView
+            android:id="@+id/chat_msg_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:text="@{timestamp}"
+            android:background="@color/selectedBackgroundColor"
+            android:textColor="@color/black"
+            android:textSize="8pt"/>
+        <TextView
+            android:id="@+id/chat_msg_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@{textOutput}"
+            android:textIsSelectable="true"
+            android:background="@color/selectedBackgroundColor"
+            android:textColor="@color/black"
+            android:textSize="8pt"
+            android:layout_below="@+id/chat_msg_timestamp"/>
 
     </RelativeLayout>
 </layout>
